Updated Simplified install with vagrant (mediawiki)

--- a/Simplified-install-with-vagrant.mediawiki
+++ b/Simplified-install-with-vagrant.mediawiki
@@ -93,10 +93,13 @@ $ vagrant destroy -f && vagrant up
 
 == Dealing with line endings and symlinks under Windows ==
 
-To run the commands below, you will need to install [http://cygwin.com/install.html cygwin], and type the commands from the Cygwin terminal. If this sounds a bit scary, note that you can use the [https://people.csail.mit.edu/ichuang/edx/ MITx Vagrant box] instead. It will be less handy to contribute to the code source, but that might be easier if all you want is to get up and running under Windows.
+Under Windows, before running `vagrant up` you will need to:
+# Install a *recent* version of [http://cygwin.com/install.html cygwin]
+# Type the commands below from the Cygwin terminal
 
-Before running `vagrant up` under Windows, go to the root `edx-platform` folder 
-and enter the following commands:
+If this sounds a bit scary, note that you can use the [https://people.csail.mit.edu/ichuang/edx/ MITx Vagrant box] instead. It will be less handy to contribute to the code source, but that might be easier if all you want is to get up and running under Windows.
+
+To type the commands, go to the root `edx-platform` folder and enter:
 
  # You need to run this from cygwin, not the Windows command-line (see above)
  git rm --cached -r . && git reset --hard
@@ -120,5 +123,7 @@ See http://stackoverflow.com/a/16754068/1265417 for details. Be sure to run
 `git checkout-symlinks` before commiting to restore the git pseudo-symlinks, 
 and `git rm-symlinks` to replace them back with symlinks, when you need to run 
 the edX services.
+
+Important: be sure to type the commands in a *recent* version of cygwin.
 
 __NOTOC__
