Updated 变基指南 (markdown)

--- a/变基指南.md
+++ b/变基指南.md
@@ -28,17 +28,17 @@
 
 ##什么是变基呢？
 
-![Alt text](master.png)
+![Alt text](https://github.com/edx/edx-platform/wiki/git-diagrams/master.png)
 
 为了理解这个，我们需要首先理解一点git运行的原理。一个git仓库是一个树形结构，树上的每个点都代表一个提交。这里有一个简单的关于仓库的例子：在主分支上它有4个提交，每个提交都有一个ID（在这里个例子中，ID是`a`,`b`,`c`和`d`）。你会注意到`d`目前是主分支中最新的提交（或者称为`HEAD`）。
 
-![Alt text](branch.png)
+![Alt text](https://github.com/edx/edx-platform/wiki/git-diagrams/branch.png)
 
 这里我们有两个分支，`master`和`my-branch`。你会看到`master`和`my-branch`中都包含`a`和`b`提交。然后它们开始分叉：`master`包含`c`和`d`，而`my-branch`包含`e`和`f`。`b`就是所谓的`my-branch`相比较于`master`的`merge-base`，或者更一般的说，就是`base`。这很有意义：你可以看到`my-branch`是基于`master`的一个早期版本。
 
 所以我们称`my-branch`是保持稳定的，而且你想让它和`master`分支的最新版本保持同步。换种说法，`my-branch`需要包含`c`和`d`。你可以做一个合并操作，但是这会让这个分支包含一些让拉取请求查看起来更困难的的怪异合并提交。为了不这样，你可以做一个[`rebase`](http://www.git-scm.com/book/en/Git-Branching-Rebasing)操作。
 
-![Alt text](rebase.png)
+![Alt text](https://github.com/edx/edx-platform/wiki/git-diagrams/rebase.png)
 
 当你变基（没错！）的时候，git会找到你分支的base（在这个例子中是`b`）以及base和HEAD中的所有提交历史（在这个例子中是`e`和`f`）。并且将这些提交历史在你要变基进去的分支（在这个例子中是master）的HEAD上*重演*一遍。参照你的修改，git创建了一些看起来就像是在master分支顶部进行修改的提交历史：在这个图中，这些提交被叫做`e`和`f`。git并不会擦除你之前的提交：`e`和`f`不会有人动的。，而且如果在变基过程中处心啊了某些错误，你可以回到过去，就像没变过基一样。
 
