Updated 变基指南 (markdown)

--- a/变基指南.md
+++ b/变基指南.md
@@ -1,3 +1,5 @@
+> 非常诚恳老实地说，这篇翻译实在是太糟糕了！我这么说绝没有针对个人的意思，只是很多翻译完全背离的原文的意思，这让看见了简直是误人子弟啊！比如说第一段，_stale_ 在这里的意思是“过时，陈旧的”，而不是理解成“稳定的”。一词之差，整个段落的性质全都变了。恳请把这翻译撤了，或者最起码不要到处传播（我是在 SegmentFault 上看到此链接的），有害的翻译比没有翻译还糟糕！
+
 -----------------------
 
 ##一些说明
