"dex-platform" => "edx-platform"

--- a/变基指南.md
+++ b/变基指南.md
@@ -53,7 +53,7 @@
 好吧，现在你知道变基是什么了，下一步就是学习如何去变。假定你已经fork了`edx-platform`，而且你创建了一个分支。就像这样：
 
 ```
-git clone https://github.com/my-username/dex-platform.git
+git clone https://github.com/my-username/edx-platform.git
 cd edx-platform
 git checkout -b my-branch
 ```
@@ -67,7 +67,7 @@ git checkout -b my-branch
 为了将`edx`添加为一个远程分支，在你的本地仓库中运行：
 
 ```
-git remote add edx https://github.com/edx/dex-platform.git
+git remote add edx https://github.com/edx/edx-platform.git
 ```
 
 你可以运行```git remote -v ```来验证是否成功，你应该看到`edx`在你的远程分支列表中。记住：这一步在每个克隆过程中只需要执行一次。
