Updated 变基指南 (markdown)

--- a/变基指南.md
+++ b/变基指南.md
@@ -75,7 +75,7 @@ git remote add edx https://github.com/edx/edx-platform.git
 ##抓取主分支的最新版本
 你的计算机需要从Github上下载关于这个官方仓库的信息，这样它就会知道主分支的最新版本。然后你的远程分支就建立好了，这很简单。在你的本地仓库中运行：
 ```
-get fetch edx
+git fetch edx
 ```
 
 ##Squash你做的改变（可选的）
